--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "description": "RSS aggregator",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "build": "webpack --mode production",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -16,21 +17,23 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "@babel/preset-env": "^7.21.0",
-    "babel-loader": "^8.2.5",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^8.4.1",
     "css-loader": "^6.11.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "html-webpack-plugin": "^5.6.3",
     "postcss-loader": "^7.3.4",
     "sass": "^1.85.1",
     "sass-loader": "^13.3.3",
     "style-loader": "^3.3.4",
     "url-loader": "^4.1.1",
-    "webpack": "^5.88.0",
+    "webpack": "^5.98.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "on-change": "^5.0.1",
+    "yup": "^1.6.1"
   }
 }
