Step 3. Add i18next and messages

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "i18next": "^24.2.3",
     "on-change": "^5.0.1",
     "yup": "^1.6.1"
   }
