--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "i18next": "^24.2.3",
