--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   "devDependencies": {
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.26.9",
+    "@eslint/js": "^9.23.0",
+    "@playwright/test": "^1.51.1",
     "babel-loader": "^8.4.1",
     "css-loader": "^6.11.0",
+    "eslint-plugin-import": "^2.31.0",
     "file-loader": "^6.2.0",
+    "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss-loader": "^7.3.4",
     "sass": "^1.85.1",
@@ -33,7 +37,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.8.3",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "i18next": "^24.2.3",
     "on-change": "^5.0.1",
