--- a/package.json
+++ b/package.json
@@ -16,29 +16,30 @@
   "author": "Pinyaev Vladimir",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.21.0",
+    "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.23.0",
     "@playwright/test": "^1.51.1",
     "babel-loader": "^8.4.1",
+    "bootstrap": "^5.3.3",
     "css-loader": "^6.11.0",
     "eslint-plugin-import": "^2.31.0",
+    "fibers": "^5.0.3",
     "file-loader": "^6.2.0",
     "globals": "^16.0.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss-loader": "^7.3.4",
-    "sass": "^1.85.1",
-    "sass-loader": "^13.3.3",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
     "style-loader": "^3.3.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.98.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.3",
     "i18next": "^24.2.3",
     "on-change": "^5.0.1",
     "yup": "^1.6.1"
