--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.4.1",
     "bootstrap": "^5.3.3",
     "css-loader": "^6.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
     "file-loader": "^6.2.0",
     "globals": "^16.0.0",
