Fix project. Step 21. MVC, view.js, app.js

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.8.4",
     "i18next": "^24.2.3",
+    "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "pino": "^9.6.0",
     "yup": "^1.6.1"
