Fix project. Step 27

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.21",
     "on-change": "^5.0.1",
     "pino": "^9.6.0",
+    "valtio": "^2.1.4",
     "yup": "^1.6.1"
   }
 }
