--- a/package.json
+++ b/package.json
@@ -42,9 +42,10 @@
     "axios": "^1.8.4",
     "i18next": "^24.2.3",
     "lodash": "^4.17.21",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "on-change": "^5.0.1",
     "pino": "^9.6.0",
-    "valtio": "^2.1.4",
     "yup": "^1.6.1"
   }
 }
