--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mobx-react-lite": "^4.1.0",
     "on-change": "^5.0.1",
     "pino": "^9.6.0",
+    "xmldom": "^0.6.0",
     "yup": "^1.6.1"
   }
 }
